kong/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "oidc-for-keycloak"
spec:
  rules:
  - http:
      paths:
      - path: /json-server-1
        backend:
          serviceName: json-server-1
          servicePort: 80
      - path: /json-server-2
        backend:
          serviceName: json-server-2
          servicePort: 80
